fixed not truncating overflow in site-wrapper

--- a/assets/sass/screen.scss
+++ b/assets/sass/screen.scss
@@ -559,13 +559,14 @@ button {
     z-index: 10;
     min-height: 100%;
     background: #fff;
-    -webkit-transition: -webkit-transform 0.5s ease;
-            transition: transform 0.5s ease;
-
     border-style: none dashed;
     border-width: 1px;
     border-radius: 3px;
     border-color: #BFC8CD;
+    overflow: hidden;
+    -webkit-transition: -webkit-transform 0.5s ease;
+            transition: transform 0.5s ease;
+
 }
 
 body.nav-opened .site-wrapper {
